groupoFR - fix textarea overlap bc of height

--- a/Groupomania/front/app/src/components/forms/_textarea-form.scss
+++ b/Groupomania/front/app/src/components/forms/_textarea-form.scss
@@ -1,15 +1,13 @@
 @import "./../../sass/main";
 
-$ph-relative-top: -84px;
+$ph-relative-top: -120px;
 $ph-relative-left: 8px;
-$phhover-relative-trans-top: 20px;
-$phfocus-relative-trans-top: 21px;
+$phhover-relative-trans-top: -10px;
+$phfocus-relative-trans-top: -15px;
 $phfocus-relative-trans-left: -4px;
-$textarea-minheight: 30px;
 
-.input-container {
+.input-textarea-container {
   padding-top: 13px;
-  height: $textarea-minheight + 27px;
   min-width: 100%;
   & .wrong-input {
     border-bottom: solid $red-error 2px;
@@ -31,7 +29,7 @@ $textarea-minheight: 30px;
     position: relative;
     z-index: 1;
     font-size: 16px;
-    min-height: $textarea-minheight;
+    min-height: 60px;
     width: 100%;
     background: transparent;
     color: $primary-line-colour;
@@ -42,7 +40,7 @@ $textarea-minheight: 30px;
       z-index: 0;
       margin: 0;
       position: relative;
-      top: $textarea-minheight + $ph-relative-top;
+      top: $ph-relative-top;
       left: $ph-relative-left;
       width: 100%;
       color: $primary-line-colour;
